# rust-hyperscan

./: .dockerignore  .gitignore  .gitmodules  .travis.yml  Cargo.toml  Dockerfile  README.md  _config.yml  bindgen.sh  build.rs  docker-compose.yml  index.html  params.json  setup-travis.sh
.github/assets/: index.html
.github/workflows/: ci.yml  pages.yml  test-chimera.yaml  test-gen.yml  test-nightly.yml  test.yml
.travis/: build-hyperscan.sh  setup-travis.sh
_posts/: 2016-04-02-welcome-to-jekyll.markdown
benches/: bench.rs  hs.rs
doc/: crates.js  search-index.js  settings.html  source-files.js
doc/hyperscan/: all.html  constant.HS_BAD_ALIGN.html  constant.HS_BAD_ALLOC.html  constant.HS_COMPILER_ERROR.html  constant.HS_CPU_FEATURES_AVX2.html  constant.HS_DB_MODE_ERROR.html  constant.HS_DB_PLATFORM_ERROR.html  constant.HS_DB_VERSION_ERROR.html  constant.HS_FLAG_ALLOWEMPTY.html  constant.HS_FLAG_CASELESS.html  constant.HS_FLAG_DOTALL.html  constant.HS_FLAG_MULTILINE.html  constant.HS_FLAG_PREFILTER.html  constant.HS_FLAG_SINGLEMATCH.html  constant.HS_FLAG_SOM_LEFTMOST.html  constant.HS_FLAG_UCP.html  constant.HS_FLAG_UTF8.html  constant.HS_INVALID.html  constant.HS_MODE_BLOCK.html  constant.HS_MODE_SOM_HORIZON_LARGE.html  constant.HS_MODE_SOM_HORIZON_MEDIUM.html  constant.HS_MODE_SOM_HORIZON_SMALL.html  constant.HS_MODE_STREAM.html  constant.HS_MODE_VECTORED.html  constant.HS_NOMEM.html  constant.HS_SCAN_TERMINATED.html  constant.HS_SUCCESS.html  constant.HS_TUNE_FAMILY_BDW.html  constant.HS_TUNE_FAMILY_GENERIC.html  constant.HS_TUNE_FAMILY_HSW.html  constant.HS_TUNE_FAMILY_IVB.html  constant.HS_TUNE_FAMILY_SLM.html  constant.HS_TUNE_FAMILY_SNB.html  enum.Block.html  enum.BlockMode.html  enum.Error.html  enum.HsError.html  enum.Matching.html  enum.SomHorizon.html  enum.Streaming.html  (+72 more)
doc/hyperscan/api/: enum.Block.html  enum.Streaming.html  enum.Vectored.html  sidebar-items.js  struct.ExpressionInfo.html  struct.PlatformInfo.html  trait.BlockScanner.html  trait.Database.html  trait.DatabaseBuilder.html  trait.Expression.html  trait.Scannable.html  trait.Scratch.html  trait.ScratchAllocator.html  trait.SerializableDatabase.html  trait.SerializedDatabase.html  trait.Stream.html  trait.StreamingScanner.html  trait.Type.html  trait.VectoredScanner.html  type.MatchEventCallback.html  type.MatchEventCallbackMut.html  type.RawDatabasePtr.html  type.RawPlatformInfoPtr.html  type.RawScratchPtr.html  type.RawStreamPtr.html  type.ScanFlags.html  type.StreamFlags.html
doc/hyperscan/chimera/: enum.Error.html  enum.MatchError.html  enum.Matching.html  enum.Mode.html  fn.compile.html  fn.version.html  index.html  sidebar-items.js  struct.Capture.html  struct.CompileError.html  struct.Database.html  struct.DatabaseRef.html  struct.Flags.html  struct.Pattern.html  struct.Patterns.html  struct.Scratch.html  struct.ScratchRef.html  trait.Builder.html  trait.ErrorEventHandler.html  trait.MatchEventHandler.html
doc/hyperscan/common/: fn.version.html  fn.version_str.html  sidebar-items.js  struct.RawDatabase.html  type.BlockDatabase.html  type.StreamingDatabase.html  type.VectoredDatabase.html
doc/hyperscan/compile/: sidebar-items.js  struct.CompileFlags.html  struct.Pattern.html  type.Patterns.html
doc/hyperscan/constants/: constant.HS_BAD_ALIGN.html  constant.HS_BAD_ALLOC.html  constant.HS_COMPILER_ERROR.html  constant.HS_CPU_FEATURES_AVX2.html  constant.HS_DB_MODE_ERROR.html  constant.HS_DB_PLATFORM_ERROR.html  constant.HS_DB_VERSION_ERROR.html  constant.HS_FLAG_ALLOWEMPTY.html  constant.HS_FLAG_CASELESS.html  constant.HS_FLAG_DOTALL.html  constant.HS_FLAG_MULTILINE.html  sidebar-items.js  (+21 more)
doc/hyperscan_sys/: all.html  constant.HS_ARCH_ERROR.html  constant.HS_BAD_ALIGN.html  constant.HS_BAD_ALLOC.html  constant.HS_COMPILER_ERROR.html  constant.HS_CPU_FEATURES_AVX2.html  constant.HS_CPU_FEATURES_AVX512.html  constant.HS_CPU_FEATURES_AVX512VBMI.html  constant.HS_DB_MODE_ERROR.html  constant.HS_DB_PLATFORM_ERROR.html  constant.HS_DB_VERSION_ERROR.html  constant.HS_EXT_FLAG_EDIT_DISTANCE.html  constant.HS_EXT_FLAG_HAMMING_DISTANCE.html  constant.HS_EXT_FLAG_MAX_OFFSET.html  constant.HS_EXT_FLAG_MIN_LENGTH.html  constant.HS_EXT_FLAG_MIN_OFFSET.html  constant.HS_FLAG_ALLOWEMPTY.html  constant.HS_FLAG_CASELESS.html  constant.HS_FLAG_COMBINATION.html  constant.HS_FLAG_DOTALL.html  constant.HS_FLAG_MULTILINE.html  constant.HS_FLAG_PREFILTER.html  constant.HS_FLAG_QUIET.html  constant.HS_FLAG_SINGLEMATCH.html  constant.HS_FLAG_SOM_LEFTMOST.html  constant.HS_FLAG_UCP.html  constant.HS_FLAG_UTF8.html  constant.HS_INSUFFICIENT_SPACE.html  constant.HS_INVALID.html  constant.HS_MAJOR.html  constant.HS_MINOR.html  constant.HS_MODE_BLOCK.html  constant.HS_MODE_NOSTREAM.html  constant.HS_MODE_SOM_HORIZON_LARGE.html  constant.HS_MODE_SOM_HORIZON_MEDIUM.html  constant.HS_MODE_SOM_HORIZON_SMALL.html  constant.HS_MODE_STREAM.html  constant.HS_MODE_VECTORED.html  constant.HS_NOMEM.html  constant.HS_OFFSET_PAST_HORIZON.html  (+76 more)
examples/: patterns  pcapscan.rs  simplegrep.rs
hyperscan/: Cargo.toml  build.rs
hyperscan-sys/: Cargo.toml  README.md  build.rs
hyperscan-sys/src/: chimera.rs  hyperscan.rs  lib.rs  raw.rs
hyperscan-sys/src/linux/: raw.rs
hyperscan-sys/src/windows/: raw.rs
hyperscan/benches/: bench.rs
hyperscan/examples/: patbench.rs  patterns  pcapscan.rs  simplegrep.rs
hyperscan/src/: api.rs  common.rs  compile.rs  cptr.rs  database.rs  error.rs  errors.rs  lib.rs  runtime.rs  scan.rs  stream.rs
hyperscan/src/chimera/: common.rs  compile.rs  error.rs  errors.rs  mod.rs  pattern.rs  runtime.rs
hyperscan/src/common/: database.rs  error.rs  mod.rs  mode.rs  serialized.rs
hyperscan/src/compile/: builder.rs  error.rs  expr.rs  literal.rs  mod.rs  pattern.rs  platform.rs
hyperscan/src/regex/: builder.rs  mod.rs  re.rs
hyperscan/src/runtime/: closure.rs  mod.rs  pattern.rs  scan.rs  scratch.rs  stream.rs
src/: api.rs  common.rs  compile.rs  constants.rs  cptr.rs  errors.rs  lib.rs  raw.rs  raw_bindgen.rs  raw_linux.rs  raw_macos.rs  regex.rs  runtime.rs
src/macos/: raw.rs
(+260 files in other folders)
