[package]
name = "hyperscan"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
build = "build.rs"
description = "Hyperscan bindings for Rust with Multiple Pattern and Streaming Scan"
homepage = "http://flier.github.io/rust-hyperscan/"
repository = "https://github.com/flier/rust-hyperscan"
documentation = "http://flier.github.io/rust-hyperscan/doc/hyperscan/index.html"
license = "Apache-2.0"
readme = "README.md"
keywords = ["regex", "hyperscan", "streaming"]

[features]
default = ["bench_scan"]
gen = ["bindgen"]
bench_parse = []
bench_compile = []
bench_scan = []
bench_all = ["bench_parse", "bench_compile", "bench_scan"]

[dependencies]
libc = "0.2"
log = "0.4"
failure = "0.1"
bitflags = "1.0"
hexplay = "0.2"
regex-syntax = "0.6"

clippy = {version = "0.0.206", optional = true}

[build-dependencies]
log = "0.4"
env_logger = "0.5"
pkg-config = "0.3"

bindgen = { version = "0.37", optional = true }

[dev-dependencies]
pretty_env_logger = "0.2"
regex = "1.0"
getopts = "0.2"
pcap = "0.7"
pnet = "0.21"
byteorder = "1.2"
lazy_static = "1.0"
rand = "0.5"
