[package]
name = "hyperscan"
version = "0.1.7"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Hyperscan bindings for Rust with Multiple Pattern and Streaming Scan"
homepage = "https://github.com/flier/rust-hyperscan"
repository = "https://github.com/flier/rust-hyperscan"
documentation = "https://docs.rs/crate/hyperscan/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["regex", "hyperscan", "streaming"]

[dependencies]
libc = "0.2"
log = "0.4"
regex-syntax = "0.6"

hyperscan-sys = { version = "0.1.7", path = "hyperscan-sys" }

[dev-dependencies]
env_logger = "0.5"
regex = "1.0"
getopts = "0.2"
pcap = "0.7"
pnet = "0.21"
byteorder = "1.2"

[lib]
name = "hyperscan"
doctest = false
