[package]
name = "hyperscan-sys"
version = "0.2.0"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Hyperscan bindings for Rust with Multiple Pattern and Streaming Scan"
homepage = "https://github.com/flier/rust-hyperscan"
repository = "https://github.com/flier/rust-hyperscan"
documentation = "https://docs.rs/crate/hyperscan-sys/"
license = "Apache-2.0"
readme = "README.md"
keywords = ["regex", "hyperscan", "streaming"]
edition = "2018"
links = "hs"

[features]
default = ["full"]
static = []
full = ["compile", "runtime"]
compile = []
runtime = []
chimera = ["static"]
gen = ["bindgen"]

[dependencies]
libc = "0.2"

[build-dependencies]
anyhow = "1.0"
pkg-config = "0.3"

bindgen = { version = "0.54", optional = true }

[lib]
doctest = false
