[package]
name = "hyperscan"
version = "0.2.1"
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Hyperscan bindings for Rust with Multiple Pattern and Streaming Scan"
homepage = "https://github.com/flier/rust-hyperscan"
repository = "https://github.com/flier/rust-hyperscan"
documentation = "https://docs.rs/crate/hyperscan/"
license = "Apache-2.0"
readme = "../README.md"
keywords = ["regex", "hyperscan", "streaming"]
edition = "2018"

[features]
default = ["full", "v5"]
static = ["hyperscan-sys/static"]
full = ["compile", "runtime"]
compile = ["hyperscan-sys/compile", "bitflags", "derive_more"]
runtime = ["hyperscan-sys/runtime"]
chimera = ["hyperscan-sys/chimera", "bitflags", "derive_more", "static"]
v5 = ["literal"]
literal = []
unstable = ["pattern"]
pattern = ["regex/pattern"]

[dependencies]
anyhow = "1.0"
bitflags = { version = "1.0", optional = true }
cfg-if = "1.0"
derive_more = { version = "0.99", optional = true }
foreign-types = "0.5"
libc = "0.2"
malloc_buf = "1.0"
semver = "1"
thiserror = "1.0"

hyperscan-sys = { version = "0.2", path = "../hyperscan-sys" }

[dev-dependencies]
byteorder = "1.2"
doc-comment = "0.3"
either = "1.5"
pcap = "0.8"
pnet = "0.28"
rand = "0.8"
regex = "1.1"
structopt = "0.3"

[build-dependencies]
rustc_version = "0.4"

[package.metadata.docs.rs]
all-features = true

[[example]]
name = "patbench"
test = false
required-features = ["full"]

[[example]]
name = "pcapscan"
test = false
required-features = ["full"]

[[example]]
name = "simplegrep"
test = false
required-features = ["full"]
