[package]
authors = ["Flier Lu <flier.lu@gmail.com>"]
description = "Hyperscan bindings for Rust with Multiple Pattern and Streaming Scan"
documentation = "https://docs.rs/crate/hyperscan/"
edition = "2018"
homepage = "https://github.com/flier/rust-hyperscan"
keywords = ["regex", "hyperscan", "streaming"]
license = "MIT OR Apache-2.0"
name = "hyperscan"
readme = "../README.md"
repository = "https://github.com/flier/rust-hyperscan"
version = "0.2.2"

[features]
default = ["full", "latest"]

gen = ["hyperscan-sys/gen"]
static = ["hyperscan-sys/static"]

chimera = ["hyperscan-sys/chimera", "bitflags", "derive_more", "static"]
compile = ["hyperscan-sys/compile", "bitflags", "derive_more"]
full = ["compile", "runtime"]
runtime = ["hyperscan-sys/runtime"]

async = ["futures"]
latest = ["v5_4"]
literal = []
pattern = ["regex/pattern"]
unstable = ["pattern"]
v4 = []
v5 = ["v4", "literal"]
v5_3 = ["v5"]
v5_4 = ["v5_3"]

[dependencies]
anyhow = "1.0"
bitflags = {version = "1.3", optional = true}
cfg-if = "1.0"
derive_more = {version = "0.99", optional = true}
foreign-types = "0.5"
libc = "0.2"
malloc_buf = "1.0"
semver = "1"
thiserror = "1.0"

futures = {version = "0.3.16", optional = true}
hyperscan-sys = {version = "0.2", path = "../hyperscan-sys"}

[dev-dependencies]
anyhow = "1.0"
byteorder = "1.2"
criterion = "0.3"
doc-comment = "0.3"
either = "1.5"
lazy_static = "1.4"
pcap = "0.9"
pnet = "0.29"
rand = "0.8"
regex = "1.5"
structopt = "0.3"
tokio-test = "0.4"

[build-dependencies]
rustc_version = "0.4"

[package.metadata.docs.rs]
all-features = true

[[bench]]
harness = false
name = "bench"

[[example]]
name = "patbench"
required-features = ["full"]
test = false

[[example]]
name = "pcapscan"
required-features = ["full"]
test = false

[[example]]
name = "simplegrep"
required-features = ["full"]
test = false
